Iterator, Stack, Queue and Binary Search Tree.